# tauri-plugin-fcm

./: .gitignore  .npmignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  biome.json  build.rs  package-lock.json  package.json  rollup.config.js
.github/workflows/: ci.yml
android/: build.gradle.kts  consumer-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/plugin/fcm/: FcmMessagingService.kt  FcmPlugin.kt
examples/basic/: GoogleService-Info.plist.example  google-services.json.example
examples/basic/src/: index.html  main.ts
examples/basic/src-tauri/: Cargo.toml  tauri.conf.json
examples/basic/src-tauri/capabilities/: default.json
examples/basic/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts  tsconfig.json
ios/: Package.swift
ios/Sources/: AppDelegateSwizzler.swift  FcmPlugin.swift  TokenBuffer.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
test/: package-surface.test.mjs  tooling-scripts.test.mjs
