[package]
name = "basic-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "basic_example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fcm = { path = "../../../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
